Revision history for {{$dist->name}}

{{$NEXT}}
  - Removed use test for devdoc

0.3       2012-08-12 15:36:35 America/New_York
  - Remove dep on IO::File::Closure.  Use Path::Class instead.
  - Remove devdoc (it wasn't really working right anyway)

0.2       2012-08-11 13:13:39 America/New_York
  - Fix deps on [GitHub]
  - Allow dirty README.pod

0.1       2012-07-30 22:51:14 EST5EDT
  - initial version