@@ -36,3 +36,6 @@ type     = pod
 filename = README.pod
 location = root
 
+[Author::Plicease::Tests]
+source = profiles/default/skel/xt/release
+
